--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.5",
+    "@types/react": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
+    "typescript": "^4.3.5"
   }
 }
